    for constant lists.
  * optimization: constant folding of simple (LIST ...) forms as DOLIST
    arguments.
  * optimization: runtime lookup of function definitions can be
    elided in more cases, eg: (let ((x 'foo)) (funcall foo)).
  * optimization: compiler is able to derive the return type of
    (AREF (THE STRING X) Y) as being CHARACTER.
  * bug fix: fixed #427: unused local aliens no longer cause compiler
    breakage. (reported by Stelian Ionescu, Andy Hefner and Stanislaw
    Halik)
  * bug fix: non-local exit from a WITH-ALIEN form no longer causes
    alien-stack leakage. (reported by Andy Hefner)
  * bug fix: PROGV signals an error when an attempt to violate declared
    type of a variable or bind a constant is made.
  * bug fix: SET signals an error when an attempt to violate declared
    type of a variable is made.
  * bug fix: restart computation during the execution of a restart
    test function no longer causes infinite recursion. (reported by
    Michael Weber)
  * bug fix: calling SB-COVER:REPORT with a non-directory pathname now
    signals an error. (thanks to Pierre Mai)
  * bug fix: EXPORT left symbol unexported in conflict situations.
    (thanks to Michael Weber)
  * bug fix: correctly handle name conflicts involving CL:NIL.
    (thanks to Michael Weber)
  * bug fix: RESOLVE-CONFLICT restart for name conflicts handles
    conflicts arising from USEing package with conflicting symbols
    correctly. (thanks to Michael Weber)

changes in sbcl-1.0.19 relative to 1.0.18:
  * new feature: user-customizable variable SB-EXT:*MUFFLED-WARNINGS*;
    warnings that go otherwise unhandled will be muffled if they are
    of the type that's the value of this variable.  
  * optimization: stack allocation is slightly more efficient on x86
    and x86-64.
  * bug fix: DEFSTRUCT forms with user-specified :CONSTRUCTOR options,
    where a raw slot always is initialized using the initform whose