@@ -19,6 +19,8 @@ changes in sbcl-1.0.20 relative to 1.0.19:
     elided in more cases, eg: (let ((x 'foo)) (funcall foo)).
   * optimization: compiler is able to derive the return type of
     (AREF (THE STRING X) Y) as being CHARACTER.
+  * optimization: CLRHASH on empty hash-tables no longer does pointless
+    work. (thanks to Alec Berryman)
   * bug fix: fixed #427: unused local aliens no longer cause compiler
     breakage. (reported by Stelian Ionescu, Andy Hefner and Stanislaw
     Halik)
